--- a/Bakery/Bakery.csproj
+++ b/Bakery/Bakery.csproj
@@ -126,17 +126,21 @@
     <Compile Include="MVVM\ViewModel\CreateOrder.cs" />
     <Compile Include="MVVM\ViewModel\EditFoodConsistency.cs" />
     <Compile Include="MVVM\ViewModel\EditProduct.cs" />
+    <Compile Include="MVVM\ViewModel\EditProvider.cs" />
     <Compile Include="MVVM\ViewModel\HomeBaker.cs" />
     <Compile Include="MVVM\ViewModel\HomeManager.cs" />
     <Compile Include="MVVM\ViewModel\MainWindow.cs" />
     <Compile Include="MVVM\ViewModel\ManageOrder.cs" />
     <Compile Include="MVVM\ViewModel\ManageRequest.cs" />
+    <Compile Include="MVVM\ViewModel\OpenDelivery.cs" />
     <Compile Include="MVVM\ViewModel\OpenOrder.cs" />
     <Compile Include="MVVM\ViewModel\OpenRequest.cs" />
     <Compile Include="MVVM\ViewModel\RemoveStorageProduct.cs" />
     <Compile Include="MVVM\ViewModel\SellFood.cs" />
     <Compile Include="MVVM\ViewModel\SellFoodConfirm.cs" />
+    <Compile Include="MVVM\ViewModel\ShowDelivery.cs" />
     <Compile Include="MVVM\ViewModel\ShowOrderList.cs" />
+    <Compile Include="MVVM\ViewModel\ShowProviders.cs" />
     <Compile Include="MVVM\ViewModel\ShowRequest.cs" />
     <Compile Include="MVVM\ViewModel\ShowShowcase.cs" />
     <Compile Include="MVVM\ViewModel\ShowStorage.cs" />
@@ -170,6 +174,9 @@
     <Compile Include="MVVM\View\EditProduct.xaml.cs">
       <DependentUpon>EditProduct.xaml</DependentUpon>
     </Compile>
+    <Compile Include="MVVM\View\EditProvider.xaml.cs">
+      <DependentUpon>EditProvider.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MVVM\View\HomeBaker.xaml.cs">
       <DependentUpon>HomeBaker.xaml</DependentUpon>
     </Compile>
@@ -181,6 +188,9 @@
     </Compile>
     <Compile Include="MVVM\View\ManageRequest.xaml.cs">
       <DependentUpon>ManageRequest.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="MVVM\View\OpenDelivery.xaml.cs">
+      <DependentUpon>OpenDelivery.xaml</DependentUpon>
     </Compile>
     <Compile Include="MVVM\View\OpenOrder.xaml.cs">
       <DependentUpon>OpenOrder.xaml</DependentUpon>
@@ -197,8 +207,14 @@
     <Compile Include="MVVM\View\SellFoodConfirm.xaml.cs">
       <DependentUpon>SellFoodConfirm.xaml</DependentUpon>
     </Compile>
+    <Compile Include="MVVM\View\ShowDelivery.xaml.cs">
+      <DependentUpon>ShowDelivery.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MVVM\View\ShowOrderList.xaml.cs">
       <DependentUpon>ShowOrderList.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="MVVM\View\ShowProviders.xaml.cs">
+      <DependentUpon>ShowProviders.xaml</DependentUpon>
     </Compile>
     <Compile Include="MVVM\View\ShowRequest.xaml.cs">
       <DependentUpon>ShowRequest.xaml</DependentUpon>
@@ -218,6 +234,12 @@
     <Compile Include="UI\Cards\ConsistencyProduct.xaml.cs">
       <DependentUpon>ConsistencyProduct.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UI\Cards\Delivery.xaml.cs">
+      <DependentUpon>Delivery.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Cards\DeliveryProduct.xaml.cs">
+      <DependentUpon>DeliveryProduct.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UI\Cards\EmptyProduct.xaml.cs">
       <DependentUpon>EmptyProduct.xaml</DependentUpon>
     </Compile>
@@ -232,6 +254,9 @@
     </Compile>
     <Compile Include="UI\Cards\Product.xaml.cs">
       <DependentUpon>Product.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Cards\Provider.xaml.cs">
+      <DependentUpon>Provider.xaml</DependentUpon>
     </Compile>
     <Compile Include="UI\Cards\Request.xaml.cs">
       <DependentUpon>Request.xaml</DependentUpon>
@@ -257,6 +282,9 @@
     <Compile Include="UI\ContextPopup\ConsistencyProductCardPopup.xaml.cs">
       <DependentUpon>ConsistencyProductCardPopup.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UI\ContextPopup\DeliveryCardPopup.xaml.cs">
+      <DependentUpon>DeliveryCardPopup.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UI\ContextPopup\EmployeeCardPopup.xaml.cs">
       <DependentUpon>EmployeeCardPopup.xaml</DependentUpon>
     </Compile>
@@ -271,6 +299,9 @@
     </Compile>
     <Compile Include="UI\ContextPopup\PreparedFoodCardPopup.xaml.cs">
       <DependentUpon>PreparedFoodCardPopup.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UI\ContextPopup\ProviderCardPopup.xaml.cs">
+      <DependentUpon>ProviderCardPopup.xaml</DependentUpon>
     </Compile>
     <Compile Include="UI\ContextPopup\RequestCardPopup.xaml.cs">
       <DependentUpon>RequestCardPopup.xaml</DependentUpon>
@@ -342,6 +373,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="MVVM\View\EditProvider.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MVVM\View\HomeBaker.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -359,6 +394,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="MVVM\View\ManageRequest.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="MVVM\View\OpenDelivery.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -382,7 +421,15 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="MVVM\View\ShowDelivery.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MVVM\View\ShowOrderList.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="MVVM\View\ShowProviders.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -442,6 +489,14 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="UI\Cards\Delivery.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UI\Cards\DeliveryProduct.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="UI\Cards\EmptyProduct.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -459,6 +514,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UI\Cards\Product.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UI\Cards\Provider.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -494,6 +553,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="UI\ContextPopup\DeliveryCardPopup.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="UI\ContextPopup\EmployeeCardPopup.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -511,6 +574,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UI\ContextPopup\PreparedFoodCardPopup.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UI\ContextPopup\ProviderCardPopup.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
