--- a/Bakery/Bakery.csproj
+++ b/Bakery/Bakery.csproj
@@ -139,6 +139,7 @@
     <Compile Include="MVVM\ViewModel\ManageRequest.cs" />
     <Compile Include="MVVM\ViewModel\OpenDelivery.cs" />
     <Compile Include="MVVM\ViewModel\OpenEmployee.cs" />
+    <Compile Include="MVVM\ViewModel\OpenLogin.cs" />
     <Compile Include="MVVM\ViewModel\OpenOrder.cs" />
     <Compile Include="MVVM\ViewModel\OpenRequest.cs" />
     <Compile Include="MVVM\ViewModel\OpenSettings.cs" />
@@ -217,6 +218,9 @@
     </Compile>
     <Compile Include="MVVM\View\OpenEmployee.xaml.cs">
       <DependentUpon>OpenEmployee.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="MVVM\View\OpenLogin.xaml.cs">
+      <DependentUpon>OpenLogin.xaml</DependentUpon>
     </Compile>
     <Compile Include="MVVM\View\OpenOrder.xaml.cs">
       <DependentUpon>OpenOrder.xaml</DependentUpon>
@@ -457,6 +461,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="MVVM\View\OpenEmployee.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="MVVM\View\OpenLogin.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
